@@ -208,6 +208,7 @@ $(TEST_SUITE_LOG): $(TEST_LOGS)
 	    msg="$${msg}Please report to $(PACKAGE_BUGREPORT).  ";	\
 	  fi;								\
 	fi;								\
+	test x"$$VERBOSE" = x || $$exit || cat $(TEST_SUITE_LOG);	\
 	$(am__tty_colors);						\
 	if $$exit; then							\
 	  echo $(ECHO_N) "$$grn$(ECHO_C)";				\
@@ -216,7 +217,6 @@ $(TEST_SUITE_LOG): $(TEST_LOGS)
 	fi;								\
 	echo "$$msg" | $(am__text_box);					\
 	echo $(ECHO_N) "$$std$(ECHO_C)";				\
-	test x"$$VERBOSE" = x || $$exit || cat $(TEST_SUITE_LOG);	\
 	$$exit
 
 RECHECK_LOGS = $(TEST_LOGS)
