@@ -1,5 +1,12 @@
 2009-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	parallel-tests: let VERBOSE=yes output appear before summary.
+	* lib/am/check.am ($(TEST_SUITE_LOG)): In `VERBOSE=yes' mode,
+	output contents of `$(TEST_SUITE_LOG)' before, rather than after
+	the test suite summary.  This ensures that the email address
+	appears near the end of the output; also, the log file already
+	starts with a result summary anyway.
+
 	parallel-tests: `clean recheck' should not rerun all tests.
 	* lib/am/check.am (recheck, recheck-html): Do not rerun all
 	tests if `$(TEST_SUITE_LOG)' does not exist.
